rename Loadouts to List of Loadouts; fix edit card not using the correct color level; spacing fix up top when toggling edit mode;

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -451,6 +451,10 @@ $iconWidth: 30px;
    border-left: 1px $gray-800 solid;
 }
 
+.hidden {
+   visibility: hidden;
+}
+
 // smallest size is single column edge to edge fluid cards
 
 // sm single column fixed width with fluid margins
